examples/bad/07_2_default_argument_reference.soy
def add_one(ref x = 3) { # we cannot use ref with default arguments
    x = x + 1;
}
